@@ -1,4 +1,4 @@
-.TH dpkg\-shlibdeps 1 "2011-08-14" "Debian Project" "dpkg utilities"
+.TH dpkg\-shlibdeps 1 "2012-01-20" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-shlibdeps \- generate shared library substvar dependencies
 .
@@ -203,8 +203,8 @@ even if they are not yet used by other packages.
 can be emitted by \fBdpkg\-shlibdeps\fP.
 Bit 0 (value=1) enables the warning "symbol \fIsym\fP used by \fIbinary\fP
 found in none of the libraries", bit 1 (value=2) enables the warning
-"dependency on \fIlibrary\fP could be avoided" and bit 2 (value=4)
-enables the warning "\fIbinary\fP shouldn't be linked with \fIlibrary\fP".
+"package could avoid a useless dependency" and bit 2 (value=4)
+enables the warning "\fIbinary\fP should not be linked against \fIlibrary\fP".
 The default \fIvalue\fP is 3: the first two warnings are active by
 default, the last one is not. Set \fIvalue\fP to 7 if you want all
 warnings to be active.
@@ -247,13 +247,16 @@ that it's a real library and that programs linking to it are using an
 RPATH so that the dynamic loader finds it. In that case, the library is
 broken and needs to be fixed.
 .TP
-.BI "dependency on " library " could be avoided if " binaries " were not uselessly linked against it (they use none of its symbols)."
+.BI "package could avoid a useless dependency if " binary " was not linked against " library " (it uses none of the library's symbols)"
 None of the \fIbinaries\fP that are linked with \fPlibrary\fP use any of the
 symbols provided by the library. By fixing all the binaries, you would avoid
 the dependency associated to this library (unless the same dependency is
 also generated by another library that is really used).
 .TP
-.IB binary " shouldn't be linked with " library " (it uses none of its symbols)."
+.BI "package could avoid a useless dependency if " binaries " were not linked against " library " (they uses none of the library's symbols)"
+Exactly the same as the above warning, but for multiple binaries.
+.TP
+.IB binary " should not be linked against " library " (it uses none of the library's symbols)"
 The \fIbinary\fR is linked to a library that it doesn't need. It's not a
 problem but some small performance improvements in binary load time can be
 obtained by not linking this library to this binary. This warning checks
