@@ -55,6 +55,8 @@ dpkg (1.16.2) UNRELEASED; urgency=low
   * Fix start-stop-daemon --name option on GNU/Hurd to match the process name.
   * Document in more detail the implications of start-stop-daemon matching
     options. Closes: #367608
+  * Improve and clarify dpkg-shlibdeps superfluous linking warning messages.
+    Based on a patch by Peter Eisentraut <petere@debian.org>. Closes: #656496
 
   [ Raphaël Hertzog ]
   * Update Dpkg::Shlibs to look into multiarch paths when cross-building
